--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,126 @@ border: 0.1rem solid var(--mainDark) !important;
   font-size: 1.2rem;
   color: var(--mainYellow);
 }
+.footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: var(--mainBlue);
+  color: white;
+  text-align: center;
+  padding: 15px;
+  outline: black 2px solid;
+  outline-offset: 2px;
+}
+.home-container{
+  background-image: url(https://images.unsplash.com/photo-1463936575829-25148e1db1b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1090&q=80);
+  height: 720px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#home-title{
+  margin-left:15%;
+  margin-top:5%;
+}
+
+
+.home-featured-container{
+  height: 485px; 
+  background-color: var(--mainWhite);
+  margin: 5%;
+  letter-spacing: 3px;
+  word-spacing: 5px;
+  line-height: 1.9;
+ }
+.aboutUsTitle{
+  font-family: 'Permanent Marker', cursive;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2%;
+}
+
+.home-about-container{
+ height: 650px;
+ background-image: url(https://artscenter.okstate.edu/images/Classes/Ceramics/open_studio_.jpg);
+background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+ border-top: black 1px solid;
+ }
+.hac-1{
+  border: solid 5px ;
+  text-align: left;
+  border-radius: 1%;
+  float: left;
+  margin: auto; 
+  margin-top: 4%;
+  outline: 5px var(--mainBlue) solid ;
+  outline-offset:  30px;
+  
+}
+.hac-2{
+  border: solid 5px ;
+  text-align: left;
+  border-radius: 1%;
+  float: left;
+  margin: auto; 
+  margin-top: 4.2%;
+  outline: 5px var(--mainBlue) solid ;
+  outline-offset:  -30px;
+  padding: 30px;
+
+}
+.hac-3{
+  border: solid 5px ;
+  text-align: left;
+  border-radius: 1%;
+  float: left;
+  margin: auto; 
+  margin-top: 4.2%;
+  outline: 5px var(--mainBlue) solid ;
+  outline-offset:  -30px;
+  padding: 30px;
+
+}
+
+.emailInput{
+  width: 100%;
+  
+}
+.lastNameInput{
+  width: 50%;
+}
+.firstNameInput{
+  width: 50%;
+}
+.instagram{
+  text-align: right;
+}
+.home-email-container{
+  height: 385px; 
+  background-color: var(--mainWhite);
+  margin: 5%;
+  letter-spacing: 3px;
+  word-spacing: 5px;
+  line-height: 1.9;
+ }
+ .email{
+   text-align: center;
+   margin-bottom: 2%;
+ }
+ .home-instagram-container{
+  height: 200px; 
+  background-color: var(--mainYellow);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 3px;
+  outline-offset: 2px;   
+  outline: black 2px solid;
+ }
+ .instagram{
+   margin-top:30px;
+   text-align: center;
+ }
