--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,10 @@ border: 0.1rem solid var(--mainDark) !important;
   margin-left:15%;
   margin-top:5%;
 }
-
+.tagline{
+  text-align: right;
+  margin-right: 5%;
+}
 
 .home-featured-container{
   height: 485px; 
@@ -80,7 +83,9 @@ border: 0.1rem solid var(--mainDark) !important;
   text-align: center;
   margin-bottom: 2%;
 }
-
+.cite{
+  text-align: right;
+}
 .home-about-container{
  height: 650px;
  background-image: url(https://artscenter.okstate.edu/images/Classes/Ceramics/open_studio_.jpg);
@@ -127,7 +132,6 @@ background-position: center;
 
 .emailInput{
   width: 100%;
-  
 }
 .lastNameInput{
   width: 50%;
@@ -164,3 +168,38 @@ background-position: center;
    margin-top:30px;
    text-align: center;
  }
+
+ .classesTitle{
+   text-align: center;
+   margin: 30px;
+ }
+ .classListing{
+   margin-top: 50px;
+   margin-bottom: 50px;
+   color: var(--mainDark);
+ }
+
+ .announcements{
+   background-color: var(--mainYellow);
+   margin-top: 5%;
+   border-radius: .5rem;
+   font-family: "Permanent Marker";
+   margin-right: 10px;
+   outline: var(--mainWhite) 1px solid;
+   outline-offset: -3px ;
+ }
+ .announcement{
+   margin: 10px;
+ }
+
+ .classesPic1{
+   background-image: url(https://momlovesbest.com/wp-content/uploads/2019/05/Best-Pottery-Wheels-For-Kids-1-1.jpg);
+height: 300px;
+background-position: center;
+ background-repeat: no-repeat;
+ margin-bottom: 5%;
+border-radius: .5rem;
+margin-left: 15%;
+outline: var(--mainWhite) 1px solid;
+outline-offset: -3px ;
+  }
