--- a/src/App.css
+++ b/src/App.css
@@ -181,9 +181,24 @@ outline-offset: -3px ;
 {background: var(--mainBlue);
        width: 100;
     height: 200;
-    margin-top: 65px;
     border-left: 750px solid transparent;
     border-right: 750px solid transparent;
     border-top: 100px solid var(--mainYellow);
   } 
  
+  .cartPage{
+   min-height: 650px
+  }
+  .Empty{
+    margin-top: 20%;
+  }
+  .homePageBtn{
+    opacity: 80%;
+    color: var(--mainWhite);
+    text-transform:capitalize;
+font-size:1.4rem;
+margin: 1rem;
+  }
+  a{
+    color: var(--mainWhite)!important;
+  }
